fix video overflow

--- a/scss/_mobile.scss
+++ b/scss/_mobile.scss
@@ -164,7 +164,7 @@
 
   .video {
     video {
-      width: 300px;
+      width: 250px;
     }
   }
 
